border fixing and scrollbar hiding

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,14 @@ h1 {
 .icons-thin {
   width: 15vw;
   grid-template-columns: 1fr;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  border: 1px solid var(--primary-transp);
+}
+
+.icons-thin::-webkit-scrollbar {
+  display: none;
 }
 
 .icon {
@@ -57,7 +65,6 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid var(--primary-transp);
   width: 100%;
   height: 100%;
   position: relative;
@@ -80,7 +87,11 @@ h1 {
 }
 
 .icon-img img {
-  width: clamp(7rem, 5.736vw + 5.164rem, 13rem);
+  height: clamp(2rem, 10.516vw + -1.365rem, 13rem);
+}
+
+.icons-thin img {
+  height: calc((100vh - 2rem) / 10);
 }
 
 .right-side {
